refactor: renamed LocalStorageService.java to FileStorageService  added custom exceptions and handler for FileStorage.